# umtsm-examples-c

./: .gitignore  LICENSE  README.md
01-paroot/case-0/: CMakeLists.txt  Paroot.c
01-paroot/case-1/: CMakeLists.txt
01-paroot/case-1/src/main/: CMakeLists.txt  main.c
01-paroot/case-1/src/paroot/: Paroot_Auxilary.c  Paroot_DataType.c  Paroot_DataType.h  paroot.umt
01-paroot/case-2/src/main/: main.c
01-paroot/case-2/src/paroot/: Paroot_Auxilary.c  Paroot_DataType.c  paroot.umt
02-numberguess/case-1/: CMakeLists.txt
03-keypress/: CMakeLists.txt
03-keypress/src/keypress/: KeyPressEventGenerator_Auxilary.c  KeyPressEventGenerator_DataType.c  KeyPressEventGenerator_DataType.h  KeyPress_Auxilary.c  KeyPress_DataType.c  KeyPress_DataType.h  keypress.umt
03-keypress/src/main/: CMakeLists.txt  main.c
04-calculator/: CMakeLists.txt
04-calculator/src/calculator/: CMakeExtras.cmake  Calculator_Auxilary.c  Calculator_DataType.c  Calculator_DataType.h  Calculator_Utilities.c  Calculator_Utilities.h  Display_Auxilary.c  Display_DataType.c  Display_DataType.h  Display_Utilities.c  Display_Utilities.h  Keypad_Auxilary.c  Keypad_DataType.c  Keypad_DataType.h  calculator.umt
04-calculator/src/main/: CMakeLists.txt  main.c
05-crossroad/: CMakeLists.txt
05-crossroad/src/crossroad/: CMakeExtras.cmake  Crossroad_Auxilary.c  Crossroad_DataType.c  Crossroad_DataType.h  crossroad.umt
05-crossroad/src/dashboard/: CMakeExtras.cmake  Dashboard_Auxilary.c  Dashboard_DataType.c  Dashboard_DataType.h  dashboard.umt
05-crossroad/src/execution-director/: CMakeExtras.cmake  ExecutionDirector_Auxilary.c  ExecutionDirector_DataType.c  ExecutionDirector_DataType.h  execution-director.umt
05-crossroad/src/lane/: CMakeExtras.cmake  Lane_Auxilary.c  Lane_DataType.c  Lane_DataType.h  lane.umt
05-crossroad/src/main/: CMakeLists.txt  main.c
05-crossroad/src/monitor/: CMakeExtras.cmake  Monitor_Auxilary.c  Monitor_DataType.c  Monitor_DataType.h  monitor.umt
05-crossroad/src/pedestrian-light/: CMakeExtras.cmake  PedestrianLights_Auxilary.c  PedestrianLights_DataType.c  PedestrianLights_DataType.h  pedestrian-light.umt
05-crossroad/src/trafficlight/: CMakeExtras.cmake  TrafficLight_Auxilary.c  TrafficLight_DataType.c  TrafficLight_DataType.h  trafficlight.umt
06-timewatch/: CMakeLists.txt
06-timewatch/src/command/: CMakeExtras.cmake  Command_Auxilary.c  Command_DataType.c  command.umt
06-timewatch/src/main/: CMakeLists.txt  main.c
06-timewatch/src/timewatch/: CMakeExtras.cmake  Timewatch_Auxilary.c  Timewatch_DataType.c  timewatch.umt
07-door/case-1/: CMakeLists.txt
(+50 files in other folders)
